refactor: Home and Tab layouts

--- a/src/TabKeeper.UI.Wasm/Components/LottiePlayer.razor
+++ b/src/TabKeeper.UI.Wasm/Components/LottiePlayer.razor
@@ -1,7 +1,6 @@
 ﻿@inherits CoreComponent
 
-<lottie-player
-    src="@(Source)"
+<dotlottie-wc src="@(Source)"
     count="@(Count)"
     intermission="@(Intermission)"
     speed="@(Speed)"
@@ -16,4 +15,4 @@
     autoplay="@(AutoPlay)"
     preserveAspectRatio="@(PreserveAspectRatio)"
     @attributes="Attributes">
-</lottie-player>
+</dotlottie-wc>
