--- a/src/TabKeeper.UI.Wasm/Layout/ShellLayout.razor
+++ b/src/TabKeeper.UI.Wasm/Layout/ShellLayout.razor
@@ -15,9 +15,9 @@
 
 <PageTitle>@(string.IsNullOrEmpty(Title) ? "Tab Keeper" : $"Tab Keeper - {Title}")</PageTitle>
 
-<header class="flex w-full items-center p-6 gap-2 border-b border-on-surface">
+<header class="flex w-full min-h-20 items-center p-6 gap-2 border-b border-on-surface">
     <Button key="Back" If="BackUri is not null" OnClick="() => nav.NavigateTo(BackUri!)"><FaSolidCircleChevronLeft class="icon" /></Button>
-    <h1 class="m-0 text-2xl font-bold">@Title</h1>
+    <h1 class="m-0 p-0 text-2xl font-bold">@Title</h1>
 </header>
 
 <main class="overflow-y-auto p-2">
