--- a/src/TabKeeper.UI.Wasm/Pages/HomePage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/HomePage.razor
@@ -1,12 +1,13 @@
 ﻿@page "/"
 @inherits CoreComponent
-@inject ISyncLocalStorageService storage
+@inject IndexedDb indexedDb
 @inject NavigationManager nav
 @inject TranslateService translate
 
 <div class="h-full flex flex-col relative">
+    @* Tabs  *@
     <div class="grow overflow-y-auto space-y-2">
-        @foreach(var entry in Entries.Items)
+        @foreach(var entry in Entries.Items.OrderBy(x => x.Date))
         {
             <div class="card flex gap-3 items-center" @key="@entry.Id.ToString()">
                 <h2 class="mb-0 me-auto truncate">@entry.Name</h2>
@@ -22,6 +23,7 @@
         }
     </div>
 
+    @* Options  *@
     <div class="absolute bottom-1 right-1 flex gap-1 bg-primary rounded-3xl">
         <Button class="btn w-14 h-14 rounded-3xl" OnClick="() => addEntryModal.Show()">
             <FaSolidPlus class="icon" />
@@ -38,54 +40,49 @@
     </div>
 </div>
 
-<Modal @ref="addEntryModal" UpdateWhen="newTabForm.ValueChanges.ToNone()" class="self-center min-h-52 flex flex-col">
-    <RxFormGroup FormGroup="newTabForm">
-        <div class="material-input">
-            <RxInput Id="name" Label="Name" T="string" Validators="[Validators.Required, MinLength3]" HideErrors />
-        </div>
-        <RxOutputErrors Id="name" />
-    </RxFormGroup>
-    <Button class="btn btn-primary mt-auto" OnClick="AddNewTab" disabled="@(newTabForm.Invalid)">Add</Button>
+<Modal @ref="addEntryModal" class="self-center flex flex-col gap-2">
+    <TabKeeper.Pages.Tabs.Components.TabForm
+        id="new-tab-form"
+        OnValidSubmit="TabValidSubmit"
+    />
+    <Button class="btn btn-primary gap-2" type="submit" form="new-tab-form">
+        <FaSolidPlus class="icon-sm" />
+        <span>@("add" | translate)</span>
+    </Button>
 </Modal>
 
 @code {
-    private ValidatorFn MinLength3 = Validators.MinLength(3);
-    private const string EntriesKey = "tab-entries";
-
-    private FormGroup newTabForm = new();
     private Modal addEntryModal = null!;
-
     private SourceList<TabEntry> Entries { get; } = new();
+    private bool loading = true;
 
-    private void AddNewTab()
+    private async Task TabValidSubmit(TabKeeper.Tabs.Tab tab)
     {
-        if (newTabForm.Invalid) return;
-
-        var name = newTabForm.GetFormControl<string>("name")?.Value;
-
-        if (name is null or "") return;
-
-        var entryId = Uuid.NewUuid();
-        Entries.Insert(0, new TabEntry(entryId, name));
-        nav.NavigateTo($"tabs/{entryId}");
+        await indexedDb.Tabs.AddAsync(tab);
+        nav.NavigateTo($"tabs/{tab.Id}");
     }
 
     protected override void OnInitialized()
     {
         ShellLayout.Context = new() { Title = "general.home" | translate };
 
-        // NewTabEntryName.Subscribe(_ => Update());
-        Entries
-            .Connect()
-            .OnItemAdded(entry => storage.TrySetItem(entry.Id, new TabKeeper.Tabs.Tab { Id = entry.Id, Name = entry.Name, Date = DateOnly.FromDateTime(DateTime.Now) }))
-            .OnItemRemoved(entry => storage.RemoveItem(entry.Id), invokeOnUnsubscribe: false)
-            .QueryWhenChanged()
-            .Do(entries => storage.SetItem(EntriesKey, entries))
-            .Subscribe(_ => TriggerUpdate())
-            .DisposeWith(this);
+        indexedDb.Tabs
+            .GetAllAsync<TabEntry>()
+            .ToObservable()
+            .Do(entries =>
+            {
+                Entries.AddRange(entries);
+                Entries
+                    .Connect()
+                    .OnItemRemoved(async entry => await indexedDb.Tabs.BatchDeleteAsync([entry.Id]), invokeOnUnsubscribe: false)
+                    .Subscribe(_ => TriggerUpdate())
+                    .DisposeWith(this);
+                loading = false;
+            })
+            .Subscribe(_ => Update());
 
-        Entries.AddRange(storage.GetItem<List<TabEntry>>(EntriesKey) ?? []);
+        // NewTabEntryName.Subscribe(_ => Update());
     }
 
-    private record TabEntry(Uuid Id, string Name);
+    private record TabEntry(Uuid Id, string Name, DateOnly? Date);
 }
