--- a/src/TabKeeper.UI.Wasm/assets/_icons.scss
+++ b/src/TabKeeper.UI.Wasm/assets/_icons.scss
@@ -1,4 +1,7 @@
 @layer base {
+  .icon-2xs {
+    @apply w-3 h-3;
+  }
   .icon-xs {
     @apply w-4 h-4;
   }
@@ -13,5 +16,11 @@
   }
   .icon-xl {
     @apply w-8 h-8;
+  }
+  .icon-2xl {
+    @apply w-9 h-9;
+  }
+  .icon-3xl {
+    @apply w-10 h-10;
   }
 }
