--- a/src/TabKeeper.UI.Wasm/Pages/Tabs/Components/PersonDetailView.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Tabs/Components/PersonDetailView.razor
@@ -1,39 +1,65 @@
 ﻿@inherits CoreRxComponent<TabPersonViewModel>
-
-<div>
-    <PersonForm Person="Person" />
-
-
-
-</div>
-
+@inject TranslateService translate
 
 <div class="space-y-3">
-    <div class="flex justify-between pb-1 border-b items-start">
-        <h2 class="m-0">@ViewModel.Name</h2>
-
-        <Button class="" OnClick="OnRemoveClicked">
-            <FaSolidTrash class="icon-sm" />
+    <div class="flex items-center justify-between">
+        <h1 class="m-0">
+            @ViewModel.Name
+        </h1>
+        <Button If="@(!edit)" class="btn btn-primary gap-2 h-10" OnClick="StartEdit">
+            <FaSolidPen class="icon-xs" />
         </Button>
     </div>
-    <div class="flex items-center gap-4">
-        <div class="flex gap-2 items-center">
-            <FaSolidMoneyBillTransfer class="icon-sm" />
-            <p class="font-semibold">@(ViewModel.Total.ToString("0.00"))</p>
+    @if (edit)
+    {
+        <PersonForm id="update-person-form" Person="@(ViewModel.Person with { })" OnValidSubmit="ValidSubmit" />
+        <div class="flex flex-row-reverse gap-2">
+            <Button class="btn btn-primary gap-2 grow" type="submit" form="update-person-form">
+                <FaSolidPlus class="icon-sm" />
+                <span>@("update" | translate)</span>
+            </Button>
+            <Button class="btn btn-cancel gap-2 grow" OnClick="CancelEdit">
+                <FaSolidX class="icon-xs" />
+                <span>@("cancel" | translate)</span>
+            </Button>
         </div>
-        <Button class="ms-auto btn btn-primary p-2" OnClick="OnEditClicked">
-            <FaSolidBagShopping class="icon-sm" />
-        </Button>
-    </div>
+    }
+    else
+    {
+        @foreach (var product in TabViewModel.Products.Items)
+        {
+            var key = product.ProductId.ToString();
+
+            <div class="flex items-center border gap-2 mb-2 rounded bg-primary-container">
+                <input id="@key" @key="key" class="ms-4 my-2 rounded-full" type="checkbox" checked="@ViewModel.HasProduct(product)" @onchange="() => ViewModel.ToggleProduct(product)" />
+                <label for="@key" class="my-2 me-4 grow cursor-pointer">@product.Name</label>
+            </div>
+        }
+    }
 </div>
 
 @code {
+    private bool edit;
+
     [Parameter, EditorRequired]
-    public Person Person { get; set; } = null!;
+    public TabViewModel TabViewModel { get; set; } = null!;
 
-    [Parameter]
-    public EventCallback OnEditClicked { get; set; }
+    private void StartEdit()
+    {
+        edit = true;
+        TriggerUpdate();
+    }
 
-    [Parameter]
-    public EventCallback OnRemoveClicked { get; set; }
+    private void CancelEdit()
+    {
+        edit = false;
+        TriggerUpdate();
+    }
+
+    private void ValidSubmit(Person person)
+    {
+        ViewModel.Person = person;
+        edit = false;
+        TriggerUpdate();
+    }
 }
