--- a/src/TabKeeper.UI.Wasm/Pages/Tabs/Components/ProductCardView.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Tabs/Components/ProductCardView.razor
@@ -2,9 +2,9 @@
 
 <div @attributes="Attributes" @onclick="OnClick" class="@this.Class("card grid grid-cols-[1fr_auto_auto] gap-3")">
     <div class="truncate flex flex-col">
-        <h1 class="m-0 font-medium truncate border-b">
+        <h2 class="truncate border-b">
             @ViewModel.Name
-        </h1>
+        </h2>
         <div class="mt-auto gap-1 flex items-center">
             <p class="m-0 text-xl font-bold">@ViewModel.Price.ToString("0.00")</p>
             <FaSolidFileInvoice class="icon-sm" />
