--- a/src/TabKeeper.UI.Wasm/Pages/Tabs/TabPage.razor
+++ b/src/TabKeeper.UI.Wasm/Pages/Tabs/TabPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/tabs/{Id}"
+﻿@page "/tab/{Id}"
 @inherits CoreRxComponent<TabViewModel>
 @inject IndexedDb indexedDb
 @inject TranslateService translate
