--- a/src/TabKeeper.UI.Wasm/App.razor
+++ b/src/TabKeeper.UI.Wasm/App.razor
@@ -1,4 +1,5 @@
-﻿@using TabKeeper.Layout
+﻿@using System.Runtime.InteropServices.JavaScript
+@using TabKeeper.Layout
 
 @inject TranslateService translate
 
